fixed paragraph break on all browsers!

--- a/styles.css
+++ b/styles.css
@@ -17,7 +17,7 @@ hr {
   opacity: 60%;
 }
 
-p {
+.description-text {
   color: #828586;
   font-size: 1.6rem;
   line-height: 150%;
@@ -132,13 +132,13 @@ p {
 }
 
 @media screen and (max-width: 1400px) {
-  p {
+  .description-text {
     font-size: calc(16px + 0.5vw);
-    line-height: 125%;
+    line-height: 130%;
   }
 
   .description {
-    padding: 0.4vw;
+    padding: 16px 0;
     max-width: 75%;
   }
 
@@ -156,15 +156,8 @@ p {
     width: 80%;
     display: flex;
     flex-direction: column;
-    gap: 20px;
+    gap: 12px;
   }
-
-  /* .paragraph-break {
-    content: '';
-    margin: 2em;
-    display: block;
-    margin-bottom: -20px;
-  } */
 }
 
 @media screen and (max-width: 640px) {
